<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_2" >

    <LinearLayout
        android:id="@+id/secondary_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <View
            android:layout_width="5dp"
            android:layout_height="fill_parent" />

        <Button
            android:id="@+id/highscores"
            style="@style/main_button_small"
            android:background="@drawable/menu_button"
            android:text="@string/highscores" />

        <Button
            android:id="@+id/rate_us"
            style="@style/main_button_small"
            android:background="@drawable/menu_button"
            android:text="@string/rate_us" />

        <Button
            android:id="@+id/instructions"
            style="@style/main_button_small"
            android:background="@drawable/menu_button"
            android:text="@string/instructions" />

        <View
            android:layout_width="5dp"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/new_game"
        style="@style/main_button"
        android:layout_above="@+id/secondary_menu"
        android:background="@drawable/menu_button"
        android:text="@string/new_game" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/sound"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:text="S" />

        <Button
            android:id="@+id/music"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toLeftOf="@+id/sound"
            android:text="M" />
    </RelativeLayout>

</RelativeLayout>